Created brand-spanking new demo for using the mouse to generate DTMF tones.  Also renamed old demo to keypress-demo to differentiate it from the ui-demo.

--- a/dtmf-tones-js/keypress-demo.html
+++ b/dtmf-tones-js/keypress-demo.html
@@ -11,7 +11,7 @@
       <link rel="stylesheet" href="">
       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
       <script src="DTMF.js"></script>
-      <script src="keypress-dtmf-tones.js"></script>
+      <script src="keypress-demo.js"></script>
     </head>
 
     <body>
