Fixed typo in comments

--- a/dtmf-tones-js/ui-demo.html
+++ b/dtmf-tones-js/ui-demo.html
@@ -8,7 +8,7 @@
       <meta name="description" content="">
       <meta name="author" content="2600Hz">
 
-      <!-- Load bootstrap CSS and our own custome CSS -->
+      <!-- Load bootstrap CSS and our own custom CSS -->
       <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
       <link href="ui-demo.css" rel="stylesheet">
 
