Improvements to keypress demo

--- a/dtmf-tones-js/keypress-demo.html
+++ b/dtmf-tones-js/keypress-demo.html
@@ -15,6 +15,7 @@
     </head>
 
     <body>
-      Press keys 0-9 to play DTFM tones.
+      Press keys 0-9 to play DTFM tones.<br>
+      <input type="text" class="phone-number-input" autofocus>
     </body>
 </html>
